# quickaz

./: Pipfile  README.md  TODO  TODO.md  pyproject.toml  quickaz.py  requirements.txt
brute/: Brute.py
enumeration/: Enumeration.py
generator/: gen.py
utils/: colors.py  dates_formater.py  ifconfigme.py  organizer.py
wordlists/: paths.txt  permutation.txt  regions.txt  underline_azure.txt
wordlists/names/: brazil_firstnames.txt  brazil_secondname.txt  common_firstnames.txt  common_secondname.txt
