[tool.poetry]
name = "quickaz"
version = "0.1.0"
description = ""
authors = ["rdnt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
quickaz = "quickaz.quickaz:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
